chart-flask/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: "www.saharbittman.com"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "*.saharbittman.com"
      secretName: flask-tls
  rules:
    - host: www.saharbittman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
  #cleanupOnDelete: true  # ensures ALB, listeners, and related resources are deleted when this Ingress is deleted
